# GENERACIO-OpenSource

./: README.md
GENERACIO_App/: CMakeLists.txt  CMakeUserPresets.json  HMDTile.cpp  HMDTile.h  cmake_install.cmake  main.cpp
GENERACIO_App/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake  QtDeployTargets-Debug.cmake  QtDeployTargets-MinSizeRel.cmake  QtDeployTargets-RelWithDebInfo.cmake  QtDeployTargets-Release.cmake
GENERACIO_App/x64/Release/: GENERACIO_App.exe.recipe  GENERACIO_App.iobj  GENERACIO_App.ipdb
GENERACIO_App/x64/Release/GENERACIO_App.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  GENERACIO_App.lastbuildstate  GENERACIO_App.write.1u.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  moc.read.1u.tlog  moc.write.1u.tlog  rcc.read.1u.tlog  rcc.write.1u.tlog  uic.read.1u.tlog  uic.write.1u.tlog
GENERACIO_App/x64/Release/qt/moc/: main.moc  moc_HMDTile.cpp
GENERACIO_App/x64/Release/qt/qmake/2c5c412bc1d74f1ea8dc411ac94de780/: .qmake.stash  props.txt  qtvars.vcxproj  qtvars.xml
GENERACIO_App/x64/Release/qt/rcc/: qrc_GENERACIO_App.cpp
GENERACIO_App/x64/Release/qt/uic/: ui_GENERACIO_App.h
KI_ENGINE/: Project_KI_ENGINE.sln
KI_ENGINE/Project_KI_ENGINE/: Project_KI_ENGINE.vcxproj  Project_KI_ENGINE.vcxproj.filters  fragment.glsl  fragment_lit.glsl  fragment_mirror.glsl  fragment_unlit.glsl  main.cpp  vertex.glsl  vertex_mirror.glsl
KI_ENGINE/Project_KI_ENGINE/x64/Release/: Project_KI_ENGINE.exe.recipe  (+3 more)
(+10 files in other folders)
